# pdf-library-manager

./: .gitignore  README.md  bootstrap.py  pyproject.toml  requirements.txt
src/: main.py
src/domain/: entities.py
src/infrastructure/db/: connection.py  models.py  repository.py
src/infrastructure/pdf/: extractor.py
src/presentation/web/: router.py
src/presentation/web/static/css/: style.css
src/presentation/web/templates/: index.html
src/use_cases/: library_service.py  scanner.py
