[tool.poetry]
name = "pdf-library-manager"
version = "0.3.0"
description = "A modern local PDF library organizer with Neumorphic UI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
pymupdf = "^1.23.26"
pydantic = "^2.6.4"
jinja2 = "^3.1.3"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"
send2trash = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
